<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="@string/edittexthint"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/radiogroupid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/bdttousd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn1text" />

        <RadioButton
            android:id="@+id/usdtobdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn2text" />

        <RadioButton
            android:id="@+id/bdttoeuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn3text" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:onClick="converterFunction"
        android:text="@string/buttontext"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/outputtext"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>